--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^3.4.4",
     "react-switch": "^5.0.1",
     "recharts": "^1.8.5",
     "styled-components": "^5.1.1",
@@ -24,7 +24,7 @@
     "uuidv4": "^6.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start":  " react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
